--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,6 +55,7 @@ jobs:
                   # e.g. ghcr.io/cnts4sci/python
                   images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ env.REPO_NAME }}
                   tags: |
+                      type=ref,event=pr 
                       type=edge,enable={{is_default_branch}}
                       type=match,pattern=(\d{4}\.\d{4}(-.+)?),group=1
                       type=raw,value=v${{ env.VERSION }},enable=${{ github.ref_type == 'tag' && startsWith(github.ref_name, 'v') }}
